--- a/style.css
+++ b/style.css
@@ -8,19 +8,19 @@ html{
     
 }
 
-h1{
-   font-size: 300%; 
-   font-weight: 100;
-    text-align: center;
-}
-
 div.header{
-    width: 50%;
+    width: 100%;
     margin-left: 25%;
     margin-top: 50px;
-    text-align: center;
-}                                                                                                                                                                                                                    
+align-items: center;
+}                    
 
+h1{
+   font-size: 75; 
+   font-weight: 100;
+   text-align: center;
+
+}
 #break {
         height: 2px; /* Adjust the thickness of the line */
         background-color: black; /* Set your desired color */
@@ -33,5 +33,4 @@ div.header{
         padding: 5px;
         text-align:center ;
         font-weight: 400;
-
     }
