--- a/style.css
+++ b/style.css
@@ -13,19 +13,26 @@ div.header{
     margin-left: 25%;
     margin-top: 50px;
 align-items: center;
+
 }                    
 
 h1{
    font-size: 75; 
    font-weight: 100;
    text-align: center;
-
+   color:white;
+   background-color: black;
+padding:5px;
 }
-#break {
-        height: 2px; /* Adjust the thickness of the line */
-        background-color: black; /* Set your desired color */
-        border: none; /* Remove default border */
-    }
+
+h2{
+   padding:5px;
+   margin:-5px;
+    color:white;
+   background-color: black;
+    font-weight: 100;
+}
+/*
     
     #bio{
         border: solid black;
@@ -34,3 +41,15 @@ h1{
         text-align:center ;
         font-weight: 400;
     }
+
+    */
+.interests{
+    padding-top: 5px;
+}
+.projects
+{
+    padding-top: 5px;
+}
+.projects li{
+font-weight: bold;
+}
